# ono

./: .gitignore  CHANGES.md  CONTACT.md  dune-project  ono.opam  run-nix.sh  shell.nix  test.txt
.github/workflows/: build-nix.yml  build_debian.yml  ci.yml  plumbing.yml
src/lib/: concrete_driver.ml  concrete_ono_gui.ml  concrete_ono_gui.mli  concrete_ono_module.ml  concrete_ono_module.mli  concrete_ono_text.ml  concrete_ono_text.mli  concrete_ono_types.ml  config_parser.ml  config_parser.mli  dune  gui.ml  gui.mli  symbolic_driver.ml  symbolic_ono_module.ml
src/tool/: cmd_concrete.ml  dune  ono_cli.ml
test/alcotest/: dune  main.ml  test_lib.ml  test_tool.ml
test/cram/concrete/display.t/: display.wat  run.t  test_display.wat
test/cram/concrete/factorial.t/: run.t
test/cram/concrete/fibonacci.t/: run.t
test/cram/concrete/gameoflife.t/: run.t
test/cram/concrete/gui.t/: gameoflife_gui.wat  gui.wat  read_int_gui.wat  run.t  test_gui.wat
test/cram/concrete/guiTest/: guiTest.wat
test/cram/concrete/load_grid.t/: config.txt  load_grid.wat  run.t
test/cram/concrete/manpage.t/: run.t
test/cram/concrete/random.t/: run.t
test/cram/concrete/readCmdOptions.t/: run.t  test.wat
test/cram/concrete/read_int.t/: readint.wat  run.t
test/cram/concrete/square.t/: run.t
test/cram/symbolic/basic_symbol.t/: run.t
test/cram/symbolic/config-generation.t/: config-generation.wat
test/cram/symbolic/fibonacci.t/: run.t
test/cram/symbolic/manpage.t/: run.t
test/lib/: dune  read_int_test.ml  test.ml
test/unit/gui/: dune  test_gui.ml
(+4 files in other folders)
