(library
 (name ono_tool_lib)
 (wrapped false)
 (modules cmd_concrete cmd_symbolic ono_cli)
 (libraries
  bos
  cmdliner
  fmt
  fmt.cli
  fmt.tty
  fpath
  logs
  logs.cli
  logs.fmt
  ono)
 (instrumentation
  (backend bisect_ppx)))

(executable
 (package ono)
 (public_name ono)
 (name ono_main)
 (modules ono_main)
 (libraries ono_tool_lib)
 (instrumentation
  (backend bisect_ppx)))
